Revert "MMA-1062 Tilbake til tegnebrettet når det gjelder filtrering"